compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__javascript_unsafe_int_in_const.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: public const i = 9_007_199_254_740_992
snapshot_kind: text
---
----- SOURCE CODE
public const i = 9_007_199_254_740_992

----- WARNING
warning: Int is outside JavaScript's safe integer range
  ┌─ /src/warning/wrn.gleam:1:18
  │
1 │ public const i = 9_007_199_254_740_992
  │                  ^^^^^^^^^^^^^^^^^^^^^ This is not a safe integer value on JavaScript

This integer value is too large to be represented accurately by
JavaScript's number type. To avoid this warning integer values must be in
the range -(2^53 - 1) - (2^53 - 1).

See JavaScript's Number.MAX_SAFE_INTEGER and Number.MIN_SAFE_INTEGER
properties for more information.
